fix locked field alignment

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-locked-field.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-locked-field.less
@@ -28,10 +28,11 @@
 input.umb-locked-field__input {
   background: rgba(255, 255, 255, 0); // if using transparent it will hide the text in safari
   border-color:transparent;
-  font-size: 13px;  
+  font-size: 13px;
   margin-bottom: 0;
   color: #ccc;
   transition: color 0.25s;
+  padding: 0;
 }
 
 input.umb-locked-field__input:focus {
